--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "nuxt-edge": "2.0.0-25476008.ba5c979",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-float-label": "^1.6.1",
     "vue-js-modal": "^1.3.12",
     "vue-lazyload": "1.2.3",
     "vue-moment": "^3.2.0",
@@ -74,6 +76,7 @@
     "postcss-loader": "2.1.1",
     "purgecss-webpack-plugin": "^0.22.0",
     "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3"
+    "style-loader": "^0.20.3",
+    "tar": "4.4.2"
   }
 }
